# pdf4you

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: requirements.md
src/pdf4you/: __init__.py  __main__.py  config.py
src/pdf4you/core/: extractor.py  llm_client.py  pipeline.py  progress.py  summarizer.py  translator.py
src/pdf4you/jobs/: jobdb.py  keystore.py  queue.py  store.py
