[project]
name = "pdf4you"
version = "0.1.0"
description = "特定チャンネルに投稿されたPDFを翻訳(pdf2zh-next)・要約してスレッドに返信するBot"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14,<3.15"
dependencies = [
    "openai>=1.40",
    "slack-bolt>=1.20",
    "aiohttp>=3.10",
    "discord.py>=2.4",
    "pymupdf",
    "langdetect>=1.0.9",
    "pydantic-settings>=2.5",
    "pdf2zh-next>=2.9",
    "aiosqlite>=0.20",
    "cryptography>=43.0",
]

[project.scripts]
pdf4you = "pdf4you.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf4you"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
